<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:fitsSystemWindows="true"
    android:minHeight="?attr/actionBarSize">

    <ImageView
        android:id="@+id/iv_clock"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="12dp"
        android:background="@drawable/btn_action_bg_selector"

        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/clock" />
    <TextView
        android:id="@+id/top_clock"
        android:layout_width="40dp"
        android:layout_marginTop="19dp"
        android:layout_marginLeft="50dp"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="10"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/top_submit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/oper_submit"
            android:textColor="@drawable/tab_bar_text_color_selector"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/top_readyq"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/layout_perinput"
            android:textColor="@drawable/tab_bar_text_color_selector"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/top_result"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:text="@string/result_table"
            android:textColor="@drawable/tab_bar_text_color_selector"
            android:textSize="15sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_search"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="end"
     />
</FrameLayout>
